ues Files.readAllBytes() instead